--- a/style.css
+++ b/style.css
@@ -1,22 +1,13 @@
 body {
-    background-color: ;
+    background-color:#A49393;
 }
 li {
     font-size:20px;
+    color:#613138
 }
-Coffee Pot
-67595E
-
-Coffee Pot
-A49393
-
-Dusty Rose
-EED6D3
-
-Rosewater
-E8B4B8
-
-Source for iphone 1 pic: By James Lu
-                        Hardwarexone.com
-                        Jan 9, 2017
-                        https://www.hardwarezone.com.sg/feature-read-these-hilarious-reactions-original-iphones-unveiling-ten-years-ago-today
+.phoneversions {
+    font-size:medium;
+}
+img {
+    border: 5px solid #E8B4B8;
+  }
